--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
 	"homepage": "https://github.com/pjl4/moviesBackend#readme",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"chai": "^4.2.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"mocha": "^7.0.1",
 		"mongoose": "^5.9.0",
-		"nodemon": "^2.0.2"
+		"nodemon": "^2.0.2",
+		"supertest": "^4.0.2"
 	}
 }
